Added get_mounts to gio module

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="item"><a href="#" class="home"><i class="bi bi-house"></i> Home</a></div>
         <div class="item"><a href="#" class="documents"><i class="bi bi-folder"></i> Documents</a></div>
         <div class="item"><a href="#" class="downloads"><i class="bi bi-download"></i> Downloads</a></div>
-        <div class="item"><a href="#" class="music"><i class="bi bi-image"></i> Music</a></div>
+        <div class="item"><a href="#" class="music"><i class="bi bi-file-music"></i> Music</a></div>
         <div class="item"><a href="#" class="pictures"><i class="bi bi-image"></i> Pictures</a></div>
         <div class="item"><a href="#" class="videos"><i class="bi bi-image"></i> Videos</a></div>
         <div class="item grid_view" title="Grid View"><a href="#" class=""><i class="bi bi-grid"></i> </a></div>
