--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
             <div id="file_grid"></div>
             <div id="hidden_file_grid" class="hidden"></div> -->
 
-            <div id="progress" class="bottom left hidden">
+            <!-- <div id="progress" class="bottom left hidden">
                 <div id="progress_msg"></div>
                 <progress id="progress_bar"></progress>
-            </div>
-            <div id="msg" class="bottom hidden"></div>
+            </div> -->
+            <!-- <div id="msg" class="bottom hidden"></div> -->
             <div id="quicksearch" class="bottom right hidden quicksearch">
                 <input type="text" id="txt_quicksearch" />
             </div>
