started hooking up tab

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="wrapper">
 
-    <div id="header_menu">
+    <div id="header_menu" class="header_menu">
 
         <div class="item"><a href="#" class="home"><i class="bi bi-house"></i> Home</a></div>
         <div class="item"><a href="#" class="documents"><i class="bi bi-folder"></i> Documents</a></div>
