--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- <link rel="stylesheet" href="./node_modules/semantic-ui-icon/icon.min.css"> -->
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="stylesheet" href="./assets/css/sidebar.css" />
+    <link rel="stylesheet" href="./assets/css/settings.css" />
     <script type="" src="./node_modules/chart.js/dist/chart.min.js"></script>
     <title></title>
 </head>
