--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/index.css" />
     <link rel="stylesheet" href="./assets/css/sidebar.css" />
     <link rel="stylesheet" href="./assets/css/settings.css" />
+    <link rel="stylesheet" href="./assets/css/find.css" />
     <script type="" src="./node_modules/chart.js/dist/chart.min.js"></script>
     <title></title>
 </head>
