removed tracker3 refs

--- a/dialogs/connect.html
+++ b/dialogs/connect.html
@@ -13,7 +13,7 @@
     <form method="post">
 
         <div class="connect">
-            <select class="input" id="connection_type" class="select">
+            <select id="connection_type" class="input select">
                 <option value="ssh">SSH</option>
                 <option value="smb">Windows Share</option>
             </select>
@@ -30,8 +30,8 @@
             <div class="msg" id="connect_msg"></div>
 
             <!-- <div class="absolute bottom"> -->
-                <input class="ui small button" id="button_close" type="button" value="Close">
-                <input class="button" id="button_connect" type="submit" value="Connect">
+                <input class="button" id="button_close" type="button" value="Close">
+                <input class="button delete" id="button_connect" type="submit" value="Connect">
             <!-- </div> -->
         </div>
 
