--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/sidebar.css" />
     <link rel="stylesheet" href="./assets/css/settings.css" />
     <link rel="stylesheet" href="./assets/css/find.css" />
+    <script type="" src="./node_modules/dragselect/dist/DragSelect.js"></script>
     <script type="" src="./node_modules/chart.js/dist/chart.min.js"></script>
     <title></title>
 </head>
@@ -18,12 +19,12 @@
 
     <div id="header_menu" class="header_menu">
 
-        <div class="item"><a href="#" class="home"><i class="bi bi-house"></i> Home</a></div>
-        <div class="item"><a href="#" class="documents"><i class="bi bi-folder"></i> Documents</a></div>
-        <div class="item"><a href="#" class="downloads"><i class="bi bi-download"></i> Downloads</a></div>
-        <div class="item"><a href="#" class="music"><i class="bi bi-file-music"></i> Music</a></div>
-        <div class="item"><a href="#" class="pictures"><i class="bi bi-image"></i> Pictures</a></div>
-        <div class="item"><a href="#" class="videos"><i class="bi bi-image"></i> Videos</a></div>
+        <div class="item"><a href="#" class="home nav_item"><i class="bi bi-house"></i> Home</a></div>
+        <div class="item"><a href="#" class="documents nav_item"><i class="bi bi-folder"></i> Documents</a></div>
+        <div class="item"><a href="#" class="downloads nav_item"><i class="bi bi-download"></i> Downloads</a></div>
+        <div class="item"><a href="#" class="music nav_item"><i class="bi bi-file-music"></i> Music</a></div>
+        <div class="item"><a href="#" class="pictures nav_item"><i class="bi bi-image"></i> Pictures</a></div>
+        <div class="item"><a href="#" class="videos nav_item"><i class="bi bi-image"></i> Videos</a></div>
         <div class="item grid_view" title="Grid View"><a href="#" class=""><i class="bi bi-grid"></i> </a></div>
         <div class="item list_view" title="List View"><a href="#" class=""><i class="bi bi-list-task"></i> </a></div>
         <div class="item show_hidden" title="Show Hidden Files"><a href="#" class="" title="Show hidden Files"><i class="bi bi-eye"></i></a></div>
@@ -169,7 +170,7 @@
     </div>
 
     </div>
-    <!-- <script src="index.js"></script> -->
+    <script src="index.js"></script>
 
 </body>
 </html>
