--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div id="draghandle" class="draghandle"></div>
 
         <div id="selection-rectangle"></div>
-
+        <div class="tab-header"></div>
         <div id="main" class="main">
 
             <!-- <div id="folder_grid" class="folder_grid"></div> -->
