Moved keyboard shortcuts. Enabled sandbox

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/css/find.css" />
     <script type="" src="./node_modules/dragselect/dist/DragSelect.js"></script>
     <script type="" src="./node_modules/chart.js/dist/chart.min.js"></script>
+    <script type="" src="./node_modules/mousetrap/mousetrap.min.js"></script>
     <title></title>
 </head>
 <body>
@@ -101,7 +102,7 @@
 
     <div id="navigation_menu" class="nav_menu">
         <div class="item" id="left"><a href="#"><i class="bi bi-chevron-left"></i></a></div>
-        <div class="item"><a href="#"><i class="bi bi-chevron-right"></i></a></div>
+        <div class="item" id="right"><a href="#"><i class="bi bi-chevron-right"></i></a></div>
         <div class="input">
             <input type="text" spellcheck="false" id="location" class="location" />
         </div>
