--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <i class="bi bi-usb-symbol large"></i>
             </div>
 
-            <div class="item" id="mb_info" title="Info">
+            <div class="item hidden" id="mb_info" title="Info">
                 <i class="bi bi-info-circle large"></i>
             </div>
 
