Fixed format on merge screen

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/sidebar.css" />
     <link rel="stylesheet" href="./assets/css/settings.css" />
     <link rel="stylesheet" href="./assets/css/find.css" />
-    <script type="" src="./node_modules/dragselect/dist/DragSelect.js"></script>
+    <!-- <script type="" src="./node_modules/dragselect/dist/DragSelect.js"></script> -->
     <script type="" src="./node_modules/chart.js/dist/chart.min.js"></script>
     <script type="" src="./node_modules/mousetrap/mousetrap.min.js"></script>
     <title></title>
