Vertical Centered text in list view
Disabled Name checkbox in Column configuration dialog

--- a/dialogs/columns.html
+++ b/dialogs/columns.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="columns">
-        <p>Choose Columns and Order to show in List View</p>
+        <p>Choose Columns to show in List View</p>
         <div class="columns_list">
             <!-- -->
         </div>
