created a SettingsManager class in main Moved window size and position settings to window.json
Updated SettingsManager class in preload

Updated the settingsView to handle sub items in json

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="wrapper">
 
-    <div id="header_menu" class="header_menu">
+    <div id="header_menu" class="header_menu hidden">
 
 
         <div class="item"><a href="#" class="home nav_item"><i class="bi bi-house"></i> Home</a></div>
@@ -139,6 +139,10 @@
 
             <div class="item hidden" id="mb_info" title="Info">
                 <i class="bi bi-info-circle large"></i>
+            </div>
+
+            <div class="item settings hidden">
+                <i class="bi bi-gear"></i>
             </div>
 
         </div>
