Added check settings back. This needs to be tested
Added setting to move the navigation bar to the bottom of the screen

Added timeout to check settings

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="wrapper">
 
-    <div id="header_menu" class="header_menu hidden">
+    <div id="header_menu" class="header_menu">
 
 
         <div class="item"><a href="#" class="home nav_item"><i class="bi bi-house"></i> Home</a></div>
@@ -37,7 +37,7 @@
 
             <div class="flex">
                 <input class="slider" type="range" id="slider" value="48" min="16" max="64" step="8" title="Adjust icon size" />
-                <div class="item settings"><a href="#" title="Settings"><i class="bi bi-gear"></i></a></div>
+                <div class="item settings hidden"><a href="#" title="Settings"><i class="bi bi-gear"></i></a></div>
             </div>
 
             <a class="item hidden" id="btn_hamburger_menu">
@@ -110,6 +110,11 @@
         </div>
 
         <div id="disk_space" class="disk_space"></div>
+
+        <div class="item settings"><a href="#" title="Settings">
+            <i class="bi bi-gear"></i></a>
+        </div>
+
     </div>
 
     <!-- </div> -->
