added some dropshadow effect added showMenubar setting

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
     <div id="header_menu" class="header_menu">
 
 
-        <div class="item"><a href="#" class="home nav_item"><i class="bi bi-house"></i> Home</a></div>
-        <div class="item"><a href="#" class="documents nav_item"><i class="bi bi-folder"></i> Documents</a></div>
-        <div class="item"><a href="#" class="downloads nav_item"><i class="bi bi-download"></i> Downloads</a></div>
-        <div class="item"><a href="#" class="music nav_item"><i class="bi bi-file-music"></i> Music</a></div>
-        <div class="item"><a href="#" class="pictures nav_item"><i class="bi bi-image"></i> Pictures</a></div>
-        <div class="item"><a href="#" class="videos nav_item"><i class="bi bi-image"></i> Videos</a></div>
+        <div class="item"><a href="#" class="home nav_item"><i class="icon bi bi-house"></i> Home</a></div>
+        <div class="item"><a href="#" class="documents nav_item"><i class="icon bi bi-folder"></i> Documents</a></div>
+        <div class="item"><a href="#" class="downloads nav_item"><i class="icon bi bi-download"></i> Downloads</a></div>
+        <div class="item"><a href="#" class="music nav_item"><i class="icon bi bi-file-music"></i> Music</a></div>
+        <div class="item"><a href="#" class="pictures nav_item"><i class="icon bi bi-image"></i> Pictures</a></div>
+        <div class="item"><a href="#" class="videos nav_item"><i class="icon bi bi-image"></i> Videos</a></div>
 
 
-        <div class="item grid_view" title="Grid View"><a href="#" class=""><i class="bi bi-grid"></i> </a></div>
-        <div class="item list_view" title="List View"><a href="#" class=""><i class="bi bi-list-task"></i> </a></div>
-        <div class="item show_hidden" title="Show Hidden Files"><a href="#" class="" title="Show hidden Files"><i class="bi bi-eye"></i></a></div>
-        <div class="item disk_usage" title="Disk Usage"><a href="#" class="" title="Disk Usage"><i class="bi bi-hdd-stack"></i></a></div>
+        <div class="item grid_view" title="Grid View"><a href="#" class=""><i class="icon bi bi-grid"></i> </a></div>
+        <div class="item list_view" title="List View"><a href="#" class=""><i class="icon bi bi-list-task"></i> </a></div>
+        <div class="item show_hidden" title="Show Hidden Files"><a href="#" class="" title="Show hidden Files"><i class="icon bi bi-eye"></i></a></div>
+        <div class="item disk_usage" title="Disk Usage"><a href="#" class="hidden" title="Disk Usage"><i class="icon bi bi-hdd-stack"></i></a></div>
 
         <div class="item right">
 
             <div class="flex">
                 <input class="slider" type="range" id="slider" value="48" min="16" max="64" step="8" title="Adjust icon size" />
-                <div class="item settings hidden"><a href="#" title="Settings"><i class="bi bi-gear"></i></a></div>
+                <div class="item settings hidden"><a href="#" title="Settings"><i class="icon bi bi-gear"></i></a></div>
             </div>
 
             <a class="item hidden" id="btn_hamburger_menu">
@@ -112,7 +112,7 @@
         <div id="disk_space" class="disk_space"></div>
 
         <div class="item settings"><a href="#" title="Settings">
-            <i class="bi bi-gear"></i></a>
+            <i class="icon bi bi-gear"></i></a>
         </div>
 
     </div>
@@ -123,31 +123,31 @@
         <div id="minibar" class="minibar">
 
             <div class="item" id="mb_home" title="Home (Ctrl+B)">
-                <i class="bi bi-house"></i>
+                <i class="icon bi bi-house"></i>
             </div>
 
             <div class="item hidden" id="mb_workspace" title="Workspace">
-                <i class="bi bi-clipboard large"></i>
+                <i class="icon bi bi-clipboard large"></i>
             </div>
 
             <div class="item" id="mb_find" title="Find">
-                <i class="bi bi-search large"></i>
+                <i class="icon bi bi-search large"></i>
             </div>
 
             <div class="item hidden" id="mb_fs" title="File System">
-                <i class="bi bi-hdd large"></i>
+                <i class="icon bi bi-hdd large"></i>
             </div>
 
             <div class="item hidden" id="mb_devices" title="Devices">
-                <i class="bi bi-usb-symbol large"></i>
+                <i class="icon bi bi-usb-symbol large"></i>
             </div>
 
             <div class="item hidden" id="mb_info" title="Info">
-                <i class="bi bi-info-circle large"></i>
+                <i class="icon bi bi-info-circle large"></i>
             </div>
 
             <div class="item settings hidden">
-                <i class="bi bi-gear"></i>
+                <i class="icon bi bi-gear"></i>
             </div>
 
         </div>
