Added multithreading for copy, delete and compression
Update progress bar to handle multithreading

--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
             <div id="quicksearch" class="bottom right hidden quicksearch">
                 <input type="text" id="txt_quicksearch" />
             </div>
+            <div class="bottom hidden progress_div ">
+            </div>
         </div>
 
     </div>
