Update package version, Improved Copy, Delete, Compress and Extract
Improved progress bar

Updated readme

--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@
             <div id="quicksearch" class="bottom right hidden quicksearch">
                 <input type="text" id="txt_quicksearch" />
             </div>
-            <div class="bottom hidden progress_div ">
+            <div class="bottom right hidden progress_div ">
             </div>
+            <div class="msg bottom hidden"></div>
         </div>
 
     </div>
