--- a/dialogs/connect.html
+++ b/dialogs/connect.html
@@ -27,8 +27,10 @@
             <input id="chk_pk" class="checkbox" type="checkbox">
             <label for="chk_pk">Use Public Key Authentication</label>
 
-            <div class="msg" id="connect_msg"></div>
-
+            <br>
+            <br>
+            <div class="connect_msg" id="connect_msg"></div>
+            <br>
             <!-- <div class="absolute bottom"> -->
                 <input class="button" id="button_close" type="button" value="Close">
                 <input class="button delete" id="button_connect" type="submit" value="Connect">
