--- a/index.html
+++ b/index.html
@@ -15,161 +15,165 @@
 </head>
 <body>
 
-    <div class="wrapper">
-
-    <div id="header_menu" class="header_menu">
-
-
-        <div class="item"><a href="#" class="home nav_item"><i class="icon bi bi-house"></i> Home</a></div>
-        <div class="item"><a href="#" class="documents nav_item"><i class="icon bi bi-folder"></i> Documents</a></div>
-        <div class="item"><a href="#" class="downloads nav_item"><i class="icon bi bi-download"></i> Downloads</a></div>
-        <div class="item"><a href="#" class="music nav_item"><i class="icon bi bi-file-music"></i> Music</a></div>
-        <div class="item"><a href="#" class="pictures nav_item"><i class="icon bi bi-image"></i> Pictures</a></div>
-        <div class="item"><a href="#" class="videos nav_item"><i class="icon bi bi-image"></i> Videos</a></div>
-
-
-        <div class="item grid_view" title="Grid View"><a href="#" class=""><i class="icon bi bi-grid"></i> </a></div>
-        <div class="item list_view" title="List View"><a href="#" class=""><i class="icon bi bi-list-task"></i> </a></div>
-        <div class="item show_hidden" title="Show Hidden Files"><a href="#" class="" title="Show hidden Files"><i class="icon bi bi-eye"></i></a></div>
-        <div class="item disk_usage" title="Disk Usage"><a href="#" class="hidden" title="Disk Usage"><i class="icon bi bi-hdd-stack"></i></a></div>
-
-        <div class="item right">
-
-            <div class="flex">
-                <input class="slider" type="range" id="slider" value="48" min="16" max="64" step="8" title="Adjust icon size" />
-                <div class="item settings hidden"><a href="#" title="Settings"><i class="icon bi bi-gear"></i></a></div>
-            </div>
-
-            <a class="item hidden" id="btn_hamburger_menu">
-                <i class="bi bi-list"></i>
-            </a>
-            <div class="flex hidden" id="hamburger_menu">
-
-                <div class="col">
-                    <div class="header">View</div>
-                    <!-- LIST VIEW -->
-                    <a class="item list" id="btn_list_view" title="List view.">
-                        <i class="bi list small"></i> List
-                    </a>
-                    <!-- GRID VIEW -->
-                    <a class="item grid" id="btn_grid_view" title="Grid view">
-                        <i class="ui icon th small"></i> Grid
-                    </a>
-                    <!-- DISK SUMMARY VIEW -->
-                    <a class="item disk" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage.">
-                        <i class="ui icon disk small"></i> Disk Summary
-                    </a>
-                    <a class="item button" id="btn_show_hidden_folders" title="Show hidden files and directories">
-                        <i class="ui icon eye small"></i> Show hidden
-                    </a>
-                    <a class="item button" id="btn_show_hidden_folders" title="Show hidden files and directories">
-                        <i class="ui icon eye small"></i> Show hidden
-                    </a>
-                </div>
-
-                <div class="col">
-                    <div class="header">Sort</div>
-                    <a class="item date" id="sort_by_date" title="Sort by Date (Click twice to change sort order)">
-                        <i class="small icon sort amount down"></i> Date
-                    </a>
-                    <a class="item name" id="sort_by_name" title="Sort by Name (Click twice to change sort order)">
-                        <i class="icon sort alphabet down small"></i> Name
-                    </a>
-                    <a class="item size" id="sort_by_size" title="Sort by Size (Click twice to change sort order)">
-                        <i class="icon sort amount down small"></i> Size
-                    </a>
-                    <a class="item type" id="sort_by_type" title="Sort by Type (Click twice to change sort order)">
-                        <i class="icon sort file alternative outline down small"></i> Type
-                    </a>
-                </div>
-
-                <div class="col">
-                    <div class="header">Utilities</div>
-                    <a class="item terminal" id="terminal" title="Open a terminal in the current folder">
-                        <i class="icon bi-terminal small"></i> Open terminal
-                    </a>
-                    <a class="item button gnome_disks" title="Gnome Disks">
-                        <i class="icon bi-hdd small"></i> Gnome disks
-                    </a>
-                    <a class="item button toggle_theme" title="Toggle Theme">
-                        <i class="icon small"></i> Toggle Theme
-                    </a>
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
-
-    <div id="navigation_menu" class="nav_menu">
-        <div class="item" id="left"><a href="#"><i class="bi bi-chevron-left"></i></a></div>
-        <div class="item" id="right"><a href="#"><i class="bi bi-chevron-right"></i></a></div>
-        <div class="input">
-            <input type="text" spellcheck="false" id="location" class="location" />
-        </div>
-
-        <div id="disk_space" class="disk_space"></div>
-
-        <div class="item settings"><a href="#" title="Settings">
-            <i class="icon bi bi-gear"></i></a>
-        </div>
-
-    </div>
-
-    <!-- </div> -->
     <div class="container">
 
-        <div id="minibar" class="minibar">
+        <div class="header_container">
 
-            <div class="item" id="mb_home" title="Home (Ctrl+B)">
-                <i class="icon bi bi-house"></i>
+            <div id="header_menu" class="header_menu">
+
+                <div class="item"><a href="#" class="home nav_item"><i class="icon bi bi-house"></i> Home</a></div>
+                <div class="item"><a href="#" class="documents nav_item"><i class="icon bi bi-folder"></i> Documents</a></div>
+                <div class="item"><a href="#" class="downloads nav_item"><i class="icon bi bi-download"></i> Downloads</a></div>
+                <div class="item"><a href="#" class="music nav_item"><i class="icon bi bi-file-music"></i> Music</a></div>
+                <div class="item"><a href="#" class="pictures nav_item"><i class="icon bi bi-image"></i> Pictures</a></div>
+                <div class="item"><a href="#" class="videos nav_item"><i class="icon bi bi-image"></i> Videos</a></div>
+
+
+                <div class="item grid_view" title="Grid View"><a href="#" class=""><i class="icon bi bi-grid"></i> </a></div>
+                <div class="item list_view" title="List View"><a href="#" class=""><i class="icon bi bi-list-task"></i> </a></div>
+                <div class="item show_hidden" title="Show Hidden Files"><a href="#" class="" title="Show hidden Files"><i class="icon bi bi-eye"></i></a></div>
+                <div class="item disk_usage" title="Disk Usage"><a href="#" class="hidden" title="Disk Usage"><i class="icon bi bi-hdd-stack"></i></a></div>
+
+                <div class="item right">
+
+                    <div class="flex">
+                        <input class="slider" type="range" id="slider" value="48" min="16" max="64" step="8" title="Adjust icon size" />
+                        <div class="item settings hidden"><a href="#" title="Settings"><i class="icon bi bi-gear"></i></a></div>
+                    </div>
+
+                    <a class="item hidden" id="btn_hamburger_menu">
+                        <i class="bi bi-list"></i>
+                    </a>
+                    <div class="flex hidden" id="hamburger_menu">
+
+                        <div class="col">
+                            <div class="header">View</div>
+                            <!-- LIST VIEW -->
+                            <a class="item list" id="btn_list_view" title="List view.">
+                                <i class="bi list small"></i> List
+                            </a>
+                            <!-- GRID VIEW -->
+                            <a class="item grid" id="btn_grid_view" title="Grid view">
+                                <i class="ui icon th small"></i> Grid
+                            </a>
+                            <!-- DISK SUMMARY VIEW -->
+                            <a class="item disk" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage.">
+                                <i class="ui icon disk small"></i> Disk Summary
+                            </a>
+                            <a class="item button" id="btn_show_hidden_folders" title="Show hidden files and directories">
+                                <i class="ui icon eye small"></i> Show hidden
+                            </a>
+                            <a class="item button" id="btn_show_hidden_folders" title="Show hidden files and directories">
+                                <i class="ui icon eye small"></i> Show hidden
+                            </a>
+                        </div>
+
+                        <div class="col">
+                            <div class="header">Sort</div>
+                            <a class="item date" id="sort_by_date" title="Sort by Date (Click twice to change sort order)">
+                                <i class="small icon sort amount down"></i> Date
+                            </a>
+                            <a class="item name" id="sort_by_name" title="Sort by Name (Click twice to change sort order)">
+                                <i class="icon sort alphabet down small"></i> Name
+                            </a>
+                            <a class="item size" id="sort_by_size" title="Sort by Size (Click twice to change sort order)">
+                                <i class="icon sort amount down small"></i> Size
+                            </a>
+                            <a class="item type" id="sort_by_type" title="Sort by Type (Click twice to change sort order)">
+                                <i class="icon sort file alternative outline down small"></i> Type
+                            </a>
+                        </div>
+
+                        <div class="col">
+                            <div class="header">Utilities</div>
+                            <a class="item terminal" id="terminal" title="Open a terminal in the current folder">
+                                <i class="icon bi-terminal small"></i> Open terminal
+                            </a>
+                            <a class="item button gnome_disks" title="Gnome Disks">
+                                <i class="icon bi-hdd small"></i> Gnome disks
+                            </a>
+                            <a class="item button toggle_theme" title="Toggle Theme">
+                                <i class="icon small"></i> Toggle Theme
+                            </a>
+                        </div>
+
+                    </div>
+
+                </div>
+
             </div>
 
-            <div class="item hidden" id="mb_workspace" title="Workspace">
-                <i class="icon bi bi-clipboard large"></i>
-            </div>
+            <div id="navigation_menu" class="nav_menu">
+                <div class="item" id="left"><a href="#"><i class="bi bi-chevron-left"></i></a></div>
+                <div class="item" id="right"><a href="#"><i class="bi bi-chevron-right"></i></a></div>
+                <div class="input">
+                    <input type="text" spellcheck="false" id="location" class="location" />
+                </div>
 
-            <div class="item" id="mb_find" title="Find">
-                <i class="icon bi bi-search large"></i>
-            </div>
+                <div id="disk_space" class="disk_space"></div>
 
-            <div class="item hidden" id="mb_fs" title="File System">
-                <i class="icon bi bi-hdd large"></i>
-            </div>
+                <div class="item settings"><a href="#" title="Settings">
+                    <i class="icon bi bi-gear"></i></a>
+                </div>
 
-            <div class="item hidden" id="mb_devices" title="Devices">
-                <i class="icon bi bi-usb-symbol large"></i>
-            </div>
-
-            <div class="item hidden" id="mb_info" title="Info">
-                <i class="icon bi bi-info-circle large"></i>
-            </div>
-
-            <div class="item settings hidden">
-                <i class="icon bi bi-gear"></i>
             </div>
 
         </div>
 
-        <div id="sidebar" class="sidebar"></div>
-        <div id="draghandle" class="draghandle"></div>
+        <!-- </div> -->
+        <div class="wrapper">
 
-        <div id="selection-rectangle"></div>
-        <div class="tab-header"></div>
+            <div id="minibar" class="minibar">
 
-        <div id="main" class="main">
-            <div id="quicksearch" class="bottom right hidden quicksearch">
-                <input type="text" id="txt_quicksearch" />
+                <div class="item" id="mb_home" title="Home (Ctrl+B)">
+                    <i class="icon bi bi-house"></i>
+                </div>
+
+                <div class="item hidden" id="mb_workspace" title="Workspace">
+                    <i class="icon bi bi-clipboard large"></i>
+                </div>
+
+                <div class="item" id="mb_find" title="Find">
+                    <i class="icon bi bi-search large"></i>
+                </div>
+
+                <div class="item hidden" id="mb_fs" title="File System">
+                    <i class="icon bi bi-hdd large"></i>
+                </div>
+
+                <div class="item hidden" id="mb_devices" title="Devices">
+                    <i class="icon bi bi-usb-symbol large"></i>
+                </div>
+
+                <div class="item hidden" id="mb_info" title="Info">
+                    <i class="icon bi bi-info-circle large"></i>
+                </div>
+
+                <div class="item settings hidden">
+                    <i class="icon bi bi-gear"></i>
+                </div>
+
             </div>
-            <div class="bottom right hidden progress_div ">
+
+            <div id="sidebar" class="sidebar"></div>
+            <div id="draghandle" class="draghandle"></div>
+
+            <div id="selection-rectangle"></div>
+            <div class="tab-header"></div>
+
+            <div id="" class="main">
+                <div id="quicksearch" class="bottom right hidden quicksearch">
+                    <input type="text" id="txt_quicksearch" />
+                </div>
+                <div class="bottom right hidden progress_div ">
+                </div>
+                <div class="msg bottom hidden"></div>
             </div>
-            <div class="msg bottom hidden"></div>
+
         </div>
 
     </div>
 
-    </div>
     <script src="index.js"></script>
 
 </body>
