--- a/dialogs/confirmdelete.html
+++ b/dialogs/confirmdelete.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="wrapper">
 
         <div id="confirm_delete">
             <div class="warning">
