attached connect button to bottom

--- a/index.html
+++ b/index.html
@@ -162,13 +162,17 @@
             <div class="tab-header"></div>
 
             <div id="" class="main">
-                <div id="quicksearch" class="bottom right hidden quicksearch">
-                    <input type="text" id="txt_quicksearch" />
+                <div class="footer bottom">
+                    <div id="quicksearch" class="bottom right hidden quicksearch">
+                        <input type="text" id="txt_quicksearch" />
+                    </div>
+                    <div class="right hidden progress_div ">
+                    </div>
+                    <div class="msg hidden"></div>
+
                 </div>
-                <div class="bottom right hidden progress_div ">
-                </div>
-                <div class="msg bottom hidden"></div>
             </div>
+
 
         </div>
 
