Added sshfs to the network connect dialog Removed smb since its not working anyway.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="item" id="left"><a href="#"><i class="bi bi-chevron-left"></i></a></div>
                 <div class="item" id="right"><a href="#"><i class="bi bi-chevron-right"></i></a></div>
                 <div class="input">
-                    <input type="text" spellcheck="false" id="location" class="location" />
+                    <input type="text" spellcheck="false" id="location" class="location input" />
                 </div>
 
                 <div id="disk_space" class="disk_space"></div>
