--- a/dialogs/connect.html
+++ b/dialogs/connect.html
@@ -16,30 +16,32 @@
             <select id="connection_type" class="input select">
                 <option value="sshfs">SSHFS</option>
                 <option value="ssh">SSH</option>
-                <option value="smb">Windows Share</option>
+                <!-- <option value="smb">Windows Share</option> -->
             </select>
             <label class="label" for="txt_server">Connect to Server / Share</label>
-            <input class="input" type="text" id="txt_server" autocomplete="on" placeholder="IP Address or Machine Name">
+            <input class="input" type="text" id="txt_server" autocomplete="on" placeholder="IP Address / Machine Name">
 
-            <label class="label" for="txt_mount_point">Mount Point</label>
-            <input class="input" type="text" id="txt_mount_point" placeholder="Mount Point">
+            <div class="mount_point_div">
+                <label class="label" for="txt_mount_point">Mount Point</label>
+                <input class="input" type="text" id="txt_mount_point" placeholder="Mount Point">
+            </div>
 
             <label class="label" for="txt_username">Username</label>
             <input class="input" type="text" id="txt_username" placeholder="User Name">
             <label class="label" for="txt_password">Password</label>
             <input class="input" type="password" id="txt_password" placeholder="Password">
 
-            <input id="chk_pk" class="checkbox" type="checkbox">
+            <input id="chk_pk" class="checkbox" type="checkbox" checked>
             <label for="chk_pk">Use Public Key Authentication</label>
 
             <br>
             <br>
-            <div class="connect_msg" id="connect_msg"></div>
+            <div class="msg_connect" id="connect_msg"></div>
             <br>
-            <!-- <div class="absolute bottom"> -->
+            <div class="absolute bottom">
                 <input class="button" id="button_close" type="button" value="Close">
                 <input class="button delete" id="button_connect" type="submit" value="Connect">
-            <!-- </div> -->
+            </div>
         </div>
 
     </form>
