Updating tab manager to handle history

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             </div>
 
             <div id="navigation_menu" class="nav_menu">
-                <div class="item" id="left"><a href="#"><i class="bi bi-chevron-left"></i></a></div>
-                <div class="item" id="right"><a href="#"><i class="bi bi-chevron-right"></i></a></div>
+                <div class="item back" id="left"><a href="#"><i class="bi bi-chevron-left"></i></a></div>
+                <div class="item forward" id="right"><a href="#"><i class="bi bi-chevron-right"></i></a></div>
                 <div class="input">
                     <input type="text" spellcheck="false" id="location" class="location input" />
                 </div>
