Restore network connections

--- a/dialogs/connect.html
+++ b/dialogs/connect.html
@@ -33,6 +33,9 @@
 
             <input id="chk_pk" class="checkbox" type="checkbox" checked>
             <label for="chk_pk">Use Public Key Authentication</label>
+            <br />
+            <input type="checkbox" id="chk_save_connection" class="chk_save_connection" checked />
+            <label for="chk_save_connection">Save Connection</label>
 
             <br>
             <br>
