reworked type ahead

--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
                     <i class="icon bi bi-info-circle large"></i>
                 </div>
 
-
+                <div class="bottom _minibar">
+                    <i class="icon bi bi-box-arrow-in-left"></i>
+                </div>
 
             </div>
 
@@ -159,8 +161,8 @@
             <div class="tab-header"></div>
 
             <div id="" class="main">
-                <div id="quicksearch" class="bottom right hidden quicksearch">
-                    <input type="text" id="txt_quicksearch" />
+                <div id="quicksearch" class="quick_search bottom right hidden">
+                    <input type="text" class="input" id="txt_quicksearch" />
                 </div>
                 <div class="bottom right hidden progress_div ">
                 </div>
