added show minibar to settings

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <i class="icon bi bi-info-circle large"></i>
                 </div>
 
-                <div class="bottom _minibar">
+                <div class="bottom _minibar hidden">
                     <i class="icon bi bi-box-arrow-in-left"></i>
                 </div>
 
